# hr

backend/: .env  data.py  db.sqlite3  pyproject.toml
backend/employee/: admin.py  models.py  serializers.py  urls.py  views.py
backend/employee/migrations/: 0001_initial.py  0002_employee_office_start_time.py  0003_attendance.py
backend/main/: settings.py  urls.py
backend/utils/: pagination.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/(DashboardLayout)/: page.tsx
frontend/src/app/(DashboardLayout)/components/dashboard/: Absent.tsx  AttendanceChart.tsx  AttendentPercentage.tsx  Present.tsx  TotalEmployee.tsx
frontend/src/app/(DashboardLayout)/components/shared/: DashboardCard.tsx
frontend/src/app/(DashboardLayout)/layout/sidebar/: MenuItems.tsx  Sidebar.tsx
